# opencv-learn

2.1/: CMakeLists.txt  display_image.cpp
ubuntu-master/: -home-zjp-code-learn_opencv-ubuntu-master-.txt  CMakeLists.txt  showimage.cpp  showvideo.cpp  videobar.cpp  videocapture_basic.cpp
